# aurum

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: .env.example  README.md  requirements.txt
backend/app/: main.py
backend/app/api/routes/: positions.py  pricing.py
backend/app/core/: config.py
backend/app/models/: position.py  pricing.py
backend/app/services/: feeds.py  oracle.py  sessions.py
backend/tests/: test_feeds.py  test_oracle.py  test_sessions.py
contract/: Cargo.toml  README.md
contract/synthetic-xau/: Cargo.toml
contract/synthetic-xau/src/: errors.rs  lib.rs  pricing.rs  test.rs  types.rs
contract/synthetic-xau/test_snapshots/test/: burn_releases_proportional_collateral.1.json  get_price_fails_before_any_price_pushed.1.json  get_price_returns_last_pushed_price.1.json  initialize_rejects_invalid_threshold_ordering.1.json  liquidate_fails_on_healthy_position.1.json  liquidate_succeeds_once_price_drop_breaches_threshold.1.json  mint_rejected_when_undercollateralized.1.json  mint_succeeds_at_exactly_minimum_ratio.1.json  push_price_updates_state.1.json
docs/: architecture.md  contract.md  risks.md  seed-issues.md
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: PositionCard.tsx  PositionHistoryChart.tsx  ReconciliationCard.tsx
frontend/lib/: api.ts  freighter.ts  session.ts  types.ts
scripts/: git-stage-setup.sh
